@@ -1,6 +1,5 @@
 package io.contek.invoker.binancelinear.api.rest.market;
 
-import com.google.common.collect.ImmutableList;
 import io.contek.invoker.binancelinear.api.common._MiniTickerSummary;
 import io.contek.invoker.binancelinear.api.rest.market.Get24hSummaries.Response;
 import io.contek.invoker.commons.actor.IActor;
@@ -10,14 +9,15 @@ import io.contek.invoker.commons.rest.RestParams;
 
 import javax.annotation.concurrent.NotThreadSafe;
 import java.util.ArrayList;
+import java.util.List;
 
 import static io.contek.invoker.binancelinear.api.ApiFactory.RateLimits.IP_REST_REQUEST_RULE;
 
 @NotThreadSafe
 public final class Get24hSummaries extends MarketRestRequest<Response> {
 
-  private static final ImmutableList<TypedPermitRequest> REQUIRED_QUOTA =
-      ImmutableList.of(IP_REST_REQUEST_RULE.forPermits(40));
+  private static final List<TypedPermitRequest> REQUIRED_QUOTA =
+      List.of(IP_REST_REQUEST_RULE.forPermits(40));
 
 
   Get24hSummaries(IActor actor, RestContext context) {
@@ -42,7 +42,7 @@ public final class Get24hSummaries extends MarketRestRequest<Response> {
   }
 
   @Override
-  protected ImmutableList<TypedPermitRequest> getRequiredQuotas() {
+  protected List<TypedPermitRequest> getRequiredQuotas() {
       return REQUIRED_QUOTA;
   }
 
