@@ -1,6 +1,5 @@
 package io.contek.invoker.binancelinear.api.rest.market;
 
-import com.google.common.collect.ImmutableList;
 import io.contek.invoker.binancelinear.api.common._BookTicker;
 import io.contek.invoker.binancelinear.api.rest.market.GetTickerBookTicker.Response;
 import io.contek.invoker.commons.actor.IActor;
@@ -10,16 +9,17 @@ import io.contek.invoker.commons.rest.RestParams;
 
 import javax.annotation.Nullable;
 import javax.annotation.concurrent.NotThreadSafe;
+import java.util.List;
 
 import static io.contek.invoker.binancelinear.api.ApiFactory.RateLimits.IP_REST_REQUEST_RULE;
 
 @NotThreadSafe
 public final class GetTickerBookTicker extends MarketRestRequest<Response> {
 
-  private static final ImmutableList<TypedPermitRequest> ONE_SYMBOL_REQUIRED_QUOTA =
-          ImmutableList.of(IP_REST_REQUEST_RULE.forPermits(2));
-  private static final ImmutableList<TypedPermitRequest> ALL_SYMBOLS_REQUIRED_QUOTA =
-      ImmutableList.of(IP_REST_REQUEST_RULE.forPermits(5));
+  private static final List<TypedPermitRequest> ONE_SYMBOL_REQUIRED_QUOTA =
+          List.of(IP_REST_REQUEST_RULE.forPermits(2));
+  private static final List<TypedPermitRequest> ALL_SYMBOLS_REQUIRED_QUOTA =
+      List.of(IP_REST_REQUEST_RULE.forPermits(5));
 
   private String symbol;
 
@@ -54,7 +54,7 @@ public final class GetTickerBookTicker extends MarketRestRequest<Response> {
   }
 
   @Override
-  protected ImmutableList<TypedPermitRequest> getRequiredQuotas() {
+  protected List<TypedPermitRequest> getRequiredQuotas() {
     if (symbol != null) {
       return ONE_SYMBOL_REQUIRED_QUOTA;
     }
